# 6dof-arm-gazebo-inverse-kinematics-esp32

./: .gitignore  CLAUDE_CONTINUE.txt  README.md
docs/images/: README.md
install/: local_setup.sh  setup.sh
install/BRAZOROBOTICO_description/share/BRAZOROBOTICO_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/Trayectorias/share/Trayectorias/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ik_bridge/lib/ik_bridge/: fk_node  ik_bridge_node  send_target
install/ik_bridge/share/ik_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.2
install/micro_ros_agent/lib/micro_ros_agent/: micro_ros_agent
install/micro_ros_agent/share/micro_ros_agent/: package.sh
install/micro_ros_msgs/share/micro_ros_msgs/: local_setup.sh  package.sh
install/micro_ros_setup/share/micro_ros_setup/: local_setup.sh  package.sh
log/: latest_build
src/: ros2.repos
src/BRAZOROBOTICO_description/: package.xml  setup.py
src/BRAZOROBOTICO_description/config/: controllers.yaml
src/BRAZOROBOTICO_description/launch/: display.launch.py
src/BRAZOROBOTICO_description/meshes/: arm1_1.stl
src/BRAZOROBOTICO_description/urdf/: BRAZOROBOTICO.gazebo  BRAZOROBOTICO.ros2control  BRAZOROBOTICO.xacro  materials.xacro
src/Trayectorias/: setup.cfg  setup.py
src/ik_bridge/: package.xml  setup.cfg  setup.py
src/trajectory_publisher/: package.xml  setup.py
src/trajectory_publisher/trajectory_publisher/: trajectory_publisher_node.py
(+9 files in other folders)
